fix(windows): 修复保存 vcf 文件时权限被拒的问题
- 在保存文件时增加权限检查，如果权限被拒则显示错误提示
- 优化错误提示信息，使其更加友好
- 保持原有的功能逻辑不变

--- a/src/vcf_generator_lite/resources/locales/en.toml
+++ b/src/vcf_generator_lite/resources/locales/en.toml
@@ -47,9 +47,13 @@ usage = """Instructions:
 title = "Select File Save Location"
 label_type_vcf = "vCard File (*.vcf)"
 
+[save_vcf_permission_denied_messagebox]
+title = "Save Failed"
+message = "Permission denied, please grant permission again."
+
 [vcf_generate_success_messagebox]
 title = "VCF File Generated Successfully"
-message = "File exported to \"{path}\"."
+message = "File exported to {path}."
 
 [vcf_generate_error_messagebox]
 title = "Failed to Generate VCF File"
