feat(utils): 添加打开外部应用失败的错误处理
- 新增 open_url_with_fallback 函数，用于尝试打开外部应用并处理失败情况
- 添加相应的错误提示对话框 show_open_url_failure_message_box
- 更新主窗口菜单中的链接打开逻辑，使用新的 fallback 方法
- 在本地化文件中添加相关错误提示信息

--- a/src/vcf_generator_lite/resources/locales/en.toml
+++ b/src/vcf_generator_lite/resources/locales/en.toml
@@ -77,3 +77,8 @@ cell_row = "Row {row}"
 title = "About VCF Generator Lite"
 message = "VCF Generator Lite v{version}"
 details = "{copyright}"
+
+[open_url_failure_message_box]
+title = "Failed to Open External Application"
+message = "Failed to open external application. Please check your default application settings.
+detail = """Link: {url}"""
