fix(i18n):修复英文本地化文件中的消息文本错误
- 修正了 open_url_failure_message_box 中的消息文本末尾缺少的引号
- 确保本地化字符串格式正确，避免解析错误
- 更新了相关翻译条目以保持一致性

--- a/src/vcf_generator_lite/resources/locales/en.toml
+++ b/src/vcf_generator_lite/resources/locales/en.toml
@@ -80,5 +80,5 @@ detail = "{copyright}"
 
 [open_url_failure_message_box]
 title = "Failed to Open External Application"
-message = "Failed to open external application. Please check your default application settings.
+message = "Failed to open external application. Please check your default application settings."
 detail = """Link: {url}"""
