feat(i18n): 添加英文和中文的文本编辑菜单国际化支持
- 在 en.toml 和 zh_CN.toml 中新增 entry_widget 菜单项翻译
- 重命名 menu.py为 text_menu.py 并更新相关导入路径
- 使用本地化函数加载文本编辑菜单项标签
- 调整模块导入顺序以符合代码风格
- 更新主窗口中对文本上下文菜单的引用路径

--- a/src/vcf_generator_lite/resources/locales/en.toml
+++ b/src/vcf_generator_lite/resources/locales/en.toml
@@ -82,3 +82,12 @@ detail = "{copyright}"
 title = "Failed to Open External Application"
 message = "Failed to open external application. Please check your default application settings."
 detail = """Link: {url}"""
+
+[entry_widget]
+menu_undo = "&Undo"
+menu_redo = "&Redo"
+menu_cut = "Cu&t"
+menu_copy = "&Copy"
+menu_paste = "&Paste"
+menu_delete = "&Delete"
+menu_select_all = "Select &All"
