feat(core): 重构InvalidLine数据结构并添加错误原因显示
- 将InvalidLine类的exception_str字段重命名为reason，提高语义清晰度
- 在无效行显示窗口中新增reason列，展示错误原因
- 添加国际化支持，包括英文和中文的错误原因表头文本
- 调整Treeview控件配置，新增reason列和高度设置

--- a/src/vcf_generator_lite/resources/locales/en.toml
+++ b/src/vcf_generator_lite/resources/locales/en.toml
@@ -71,6 +71,7 @@ message = "File exported to {path}, invalid numbers have been ignored."
 label_invalid_numbers = "Invalid numbers: "
 heading_row = "Position"
 heading_original = "Original Content"
+heading_reason = "Reason"
 cell_row = "Row {row}"
 
 [about_message_box]
