fix(ui): 修复生成按钮快捷键和防止重复生成问题
- 将生成按钮快捷键从 Ctrl+S 改为 Ctrl+G
- 添加生成状态检查防止重复点击生成按钮
- 更新英文界面文本从 "Start Generate..." 为 "Generate file..."
- 更新中文界面文本从 "开始生成" 为 "生成文件"
- 修复快捷键绑定错误问题

--- a/src/vcf_generator_lite/resources/locales/en.toml
+++ b/src/vcf_generator_lite/resources/locales/en.toml
@@ -12,7 +12,7 @@ button_generate = "Generate"
 label_generating = "Generating..."
 
 menu_file = "&File"
-menu_file_generate = "&Start Generate..."
+menu_file_generate = "&Generate file..."
 menu_file_exit = "E&xit"
 
 menu_edit = "&Edit"
