feat(main-controller): 添加系统错误处理机制
- 在英文语言包中新增系统错误消息框的标题和消息文本
- 在中文语言包中新增系统错误消息框的标题和消息文本
- 在主控制器中捕获OSError异常并显示系统错误消息框
- 提供更详细的错误信息，包含具体的错误原因

--- a/src/vcf_generator_lite/resources/locales/en.toml
+++ b/src/vcf_generator_lite/resources/locales/en.toml
@@ -53,6 +53,10 @@ label_type_vcf = "vCard File (*.vcf)"
 title = "Save Failed"
 message = "Permission denied, please grant permission again."
 
+[save_vcf_os_error_message_box]
+title = "Save Failed"
+message = "System error: {reason}"
+
 [vcf_generate_success_message_box]
 title = "VCF File Generated Successfully"
 message = "File exported to {path}."
