feat(contact): 支持姓名和备注可选，改进联系人解析逻辑
- 修改Contact模型，使name和note字段变为可选
- 新增PhoneNotFoundError异常类用于电话号码未找到的情况
- 重构parse_contact函数，支持姓名为空的情况
- 改进多手机号处理逻辑，使用第一个有效手机号
- 添加制表符转空格功能

refactor(vcf_generator): 优化错误处理和数据结构

- 将InvalidLine的reason字段改为exception字段，存储异常对象
- 移除VCardGeneratorState和GenerateResult中的exceptions列表
- 改为在GenerateResult中存储单个exception对象
- 优化线程异常处理逻辑，只返回第一个异常

refactor(vcard): 支持可选字段的vCard序列化

- 修改serialize_to_vcard函数，支持name和note为空的情况
- 使用列表推导式过滤None值，避免生成空字段

fix(parser): 改进异常处理和错误信息显示

- 将ValueError替换为更具体的PhoneNotFoundError
- 添加本地化错误信息支持
- 优化错误日志记录方式
- 修复异常信息在无效行窗口中的显示

test(contact): 完善联系人解析测试用例

- 更新测试用例以匹配新的Contact模型
- 添加姓名为空的测试场景
- 添加制表符转空格的测试用例
- 调整异常测试以使用PhoneNotFoundError

--- a/src/vcf_generator_lite/resources/locales/en.toml
+++ b/src/vcf_generator_lite/resources/locales/en.toml
@@ -77,6 +77,7 @@ heading_row = "Position"
 heading_original = "Original Content"
 heading_reason = "Reason"
 cell_row = "Row {row}"
+exception_phone_not_found = "Phone number not found"
 
 [about_message_box]
 title = "About VCF Generator Lite"
